# E-Commerce-App-Django

./: Dockerfile  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt  tset.sqlite3
.github/workflows/: actions.yml
app/: settings.py  urls.py
app/templates/home/: cart.html  checkout.html  index.html  profile.html  profile_update.html
app/templates/includes/: footer.html  navbar.html  scripts.html  (+3 more)
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_product.py  0003_auto_20231020_0213.py  0004_auto_20231020_0841.py  0005_alter_product_image.py  0006_alter_product_image.py  0007_alter_user_date_joined.py  0008_alter_user_date_joined.py  0009_alter_user_date_joined.py  0010_auto_20231020_1007.py  0011_alter_user_date_joined.py  0012_alter_user_date_joined.py  0013_auto_20231022_0849.py  0014_alter_user_date_joined.py  0015_auto_20231022_1419.py  0016_alter_user_date_joined.py  0017_auto_20231022_1428.py  0018_alter_user_date_joined.py  0019_auto_20231022_2046.py  0020_auto_20231022_2111.py  0021_auto_20231022_2114.py  0022_auto_20231022_2117.py  0023_auto_20231022_2205.py  0024_auto_20231022_2208.py  0025_auto_20231024_2255.py  0026_auto_20231024_2313.py  0027_alter_user_date_joined.py  0028_auto_20231024_2316.py  0029_auto_20231024_2324.py  0030_auto_20231030_2313.py  0031_alter_user_date_joined.py  0032_auto_20231221_1637.py
ecom_apps/api/: apps.py  serializers.py  urls.py  views.py
ecom_apps/shop/: apps.py  urls.py  views.py
ecom_apps/user/: apps.py  signals.py  urls.py  views.py
staticfiles/assets/: style.css
(+13 files in other folders)
