[tool.poetry]
name = "e-commerce-app-django"
version = "0.1.0"
description = "my ecom site"
authors = ["PythonDecorator <okpeamos.ao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^3.2.22"
psycopg2 = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"
djangorestframework = "^3.12.4"
drf-spectacular = "^0.15.1"
python-dotenv = "^1.0.0"
Pillow = "^10.1.0"
dj-database-url = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
